welcome.lessons.welcome.array.has271.Has271.scala.error
has271:8: error: value ==- is not a member of Int
	     	if (nums(3)==-1) {
                           ^